# account-wallet-service-demo

./: .gitignore  Jenkinsfile  README.md  project.code-workspace  pyproject.toml
auth_service/: .dockerignore  Dockerfile  auth_service_architecture.md  crud.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
auth_service/app/: main.py
auth_service/app/api/v1/: auth.py  users.py
auth_service/app/core/: config.py  security.py
auth_service/app/db/: database.py
auth_service/app/models/: user.py
auth_service/app/schemas/: auth.py  user.py
auth_service/app/services/: auth_service.py  user_service.py
auth_service/migrations/: env.py
auth_service/migrations/versions/: 59282d9a1a85_initial_schema.py  8508aa33887e_first_init.py
infra/: docker-compose.yml
wallet_service/: Dockerfile  auth.py  crud.py  database.py  docker-compose.yml  idempotency.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  wallet_service_architecture.md  worker.py
wallet_service/app/: main.py
wallet_service/app/api/v1/: wallet.py
wallet_service/app/core/: config.py  security.py
wallet_service/app/db/: database.py
wallet_service/app/models/: account.py  transaction.py  wallet.py
wallet_service/app/schemas/: schemas.py  wallet.py
wallet_service/app/services/: wallet_service.py
wallet_service/migrations/: env.py
wallet_service/migrations/versions/: 3017f7f818eb_01_first_migration.py  ad42d2694c46_initial_schema.py
