[tool.poetry]
name = "account-wallet-service-demo"
version = "0.1.0"
description = "Demo wallet service with auth"
authors = ["@EugeneCodx"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "auth_service", from = "." },
    { include = "wallet_service", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"

# Общие зависимости
fastapi = "0.121.2"
uvicorn = "0.38.0"
sqlalchemy = "2.0.44"
pydantic = "2.12.4"
psycopg2-binary = "2.9.11"
alembic = "1.17.2"
python-multipart = "0.0.20"

# Только для auth
python-jose = "3.5.0"
passlib = {extras = ["bcrypt"], version = "1.7.4", optional = true}

# Только для wallet
rq = {version = "2.6.0", optional = true}
redis = {version = "5.2.0", optional = true}

[tool.poetry.extras]
auth = ["python-jose", "passlib"]
wallet = ["rq", "redis"]
